# trackmanager

./: .gitignore  CMakeLists.txt  Exception.cpp  Exception.h  Repository.cpp  Repository.h  TODO  abstractimporter.cpp  abstractimporter.h  abstractmodel.cpp  abstractmodel.h  gpximporter.cpp  gpximporter.h  main.cpp  mainwindow.cpp  mainwindow.h  model.h  types.h
model/: Activity.cpp  Activity.h  Box.cpp  Box.h  DescribedEntity.cpp  DescribedEntity.h  Entity.cpp  Entity.h  Gear.cpp  Gear.h  Highlight.cpp  Highlight.h  NamedEntity.cpp  NamedEntity.h  Point.cpp  Point.h  Position.cpp  Position.h  Tour.cpp  Tour.h  Track.cpp  Track.h  TrackPoint.cpp  TrackPoint.h  WayPoint.cpp  WayPoint.h
ui/: Cache.cpp  Cache.h  ControlView.cpp  ControlView.h  Layer.cpp  Layer.h  mainwindow.cpp  mainwindow.h  tools.cpp  tools.h
